force-app/main/default/objects/CustomContract__c/CustomContract__c.object-meta.xml
<CustomObject>
    <label>合同</label>
    <nameField>
        <label>合同名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>