force-app/main/default/objects/CustomContract__c/fields/ApplyUser__c.field-meta.xml
<CustomField>
    <fullName>ApplyUser__c</fullName>
    <label>申请人（组件用）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>