force-app/main/default/objects/CustomContract__c/fields/ApplyUsers__c.field-meta.xml
<CustomField>
    <fullName>ApplyUsers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申请人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomContracts</relationshipName>
    <type>Lookup</type>
</CustomField>