force-app/main/default/objects/CustomContract__c/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>合同类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPONSORSHIP AGREEMENT</fullName>
            </value>
            <value>
                <fullName>HCP/HCO</fullName>
            </value>
            <value>
                <fullName>PSA-PATIENT</fullName>
            </value>
            <value>
                <fullName>MASTER SERVICE AGREEMENT</fullName>
            </value>
            <value>
                <fullName>EVENT PARTICIPATION AGREEMENT</fullName>
            </value>
            <value>
                <fullName>RESEARCH GRANT AGREEMENT</fullName>
            </value>
            <value>
                <fullName>DONATION AGREEMENT</fullName>
            </value>
            <value>
                <fullName>CONFIDENTIAL DISCLOUSURE AGREEMENT</fullName>
            </value>
            <value>
                <fullName>RENOVATION AGREEMENT</fullName>
            </value>
            <value>
                <fullName>LEASE AGREEMENT</fullName>
            </value>
            <value>
                <fullName>CLINICAL STUDY AGREEMENT</fullName>
            </value>
            <value>
                <fullName>SCOPE OF WORK</fullName>
            </value>
            <value>
                <fullName>COLLABORATION AGREEMENT</fullName>
            </value>
            <value>
                <fullName>LABOR AGREEMENT</fullName>
            </value>
            <value>
                <fullName>INSURANCE AGREEMENT</fullName>
            </value>
            <value>
                <fullName>SERVICE AGREEMENT</fullName>
            </value>
            <value>
                <fullName>MISCELLANEOUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>