force-app/main/default/objects/CustomContract__c/fields/ContractAmountType__c.field-meta.xml
<CustomField>
    <fullName>ContractAmountType__c</fullName>
    <label>合同金额分类</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>合同金额 &lt;= RMB 300,000</fullName>
            </value>
            <value>
                <fullName>RMB 300,000 &lt;= 合同金额 &lt;= RMB 1,000,000</fullName>
            </value>
            <value>
                <fullName>合同金额 &gt; 1,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>