force-app/main/default/objects/CustomContract__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <displayFormat>C-{00000000}</displayFormat>
    <label>合同编号</label>
    <type>AutoNumber</type>
</CustomField>