force-app/main/default/objects/CustomContract__c/fields/Files_Named__c.field-meta.xml
<CustomField>
    <fullName>Files_Named__c</fullName>
    <label>文件命名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>