force-app/main/default/objects/CustomContract__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>申请日期</label>
    <type>Date</type>
</CustomField>