force-app/main/default/objects/CustomContract__c/fields/RequestDepartment__c.field-meta.xml
<CustomField>
    <fullName>RequestDepartment__c</fullName>
    <label>申请部门</label>
    <length>200</length>
    <type>Text</type>
</CustomField>