force-app/main/default/objects/CustomContract__c/fields/Signature_Target__c.field-meta.xml
<CustomField>
    <fullName>Signature_Target__c</fullName>
    <label>合同签署对象</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ContactType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HCP/HCO</fullName>
            </value>
            <value>
                <fullName>第三方供应商</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>